unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_Upcoming_Invoices_Revenue_Rollup__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Upcoming_Invoices_Revenue_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled it fetches the upcoming invoice from stripe and save it as Draft Invoice for the subscription and updates the Account Upcoming MRR/ARR/QRR rollup fields.</inlineHelpText>
    <label>Enable Upcoming Invoices Revenue Rollup</label>
    <type>Checkbox</type>
</CustomField>