unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Failed_Trans_Not_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Failed_Trans_Not_Template_Id__c</fullName>
    <inlineHelpText>The template ID of the email that is sent out on failed transactions.</inlineHelpText>
    <label>Failed Trans Not Template ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>