unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Payment_Schedule_Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Schedule_Transaction_Count__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>If the Payment Schedule Count field is blank, this number defines the default number of transactions created.</inlineHelpText>
    <label>Payment Schedule Transaction Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>