unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Record_Sync_List_Size__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Record_Sync_List_Size__c</fullName>
    <inlineHelpText>Technical setting, DO NOT MODIFY.</inlineHelpText>
    <label>Record Sync List Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>