unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__RestAPI_FailedTransactionMessage__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__RestAPI_FailedTransactionMessage__c</fullName>
    <inlineHelpText>This text is added to the end of the Rest API error message if a Transaction fails.</inlineHelpText>
    <label>RestAPI_FailedTransactionMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>