unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Retain_Invoice_Text_Values__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retain_Invoice_Text_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, “Bill To” and “Ship To” text values on the Invoice are retained when “Bill To” and “Ship To” Account or Contact lookups are updated, if not null.</description>
    <inlineHelpText>If checked, “Bill To” and “Ship To” text values on the Invoice are retained when “Bill To” and “Ship To” Account or Contact lookups are updated, if not null.</inlineHelpText>
    <label>Retain Invoice text values</label>
    <type>Checkbox</type>
</CustomField>