unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Retain_Webhook_Records_for_Days__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retain_Webhook_Records_for_Days__c</fullName>
    <inlineHelpText>This setting controls how long to keep processed webhook records. The default value is 30 (days) - Setting a blank value will disable automatic deletion of processed webhooks.</inlineHelpText>
    <label>Retain Webhook Records for (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>