unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__SalesDocument_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__SalesDocument_Field_Id__c</fullName>
    <inlineHelpText>DO NOT MODIFY THIS CUSTOM SETTING MANUALLY!</inlineHelpText>
    <label>Invoice Field Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>