unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__SSN_Last_4_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__SSN_Last_4_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the encrypted value in SSN Last 4 will not be removed when a Connected Account is verified.</description>
    <inlineHelpText>When checked, the encrypted value in SSN Last 4 will not be removed when a Connected Account is verified..</inlineHelpText>
    <label>SSN Last 4 Encrypted</label>
    <type>Checkbox</type>
</CustomField>