unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Terminal_Disable_New_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Terminal_Disable_New_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Disable New Payment Method</label>
    <type>Checkbox</type>
</CustomField>