unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Update_Invoices_With_Subscription_PM__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Update_Invoices_With_Subscription_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, Stripe will charge the default PM on the Customer. If checked, new Invoices are automatically updated to match the PM set on Subscription.</description>
    <inlineHelpText>If unchecked, Stripe will charge the default PM on the Customer. If checked, new Invoices are automatically updated to match the PM set on Subscription.</inlineHelpText>
    <label>Update Invoices with Subscription PM</label>
    <type>Checkbox</type>
</CustomField>