unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Webhook_Batch_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Webhook_Batch_Delay_Minutes__c</fullName>
    <inlineHelpText>The number of minutes by which the webhook process is delayed.</inlineHelpText>
    <label>Webhook Batch Delay Minutes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>