unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Webhook_Batch_Record_Processing_Size__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Webhook_Batch_Record_Processing_Size__c</fullName>
    <inlineHelpText>The number of records to process in one scheduled batch. Default to all records</inlineHelpText>
    <label>Webhook Batch Processing Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>